--- a/templates/block--views-block--attached-webform-submissions-block-1.html.twig
+++ b/templates/block--views-block--attached-webform-submissions-block-1.html.twig
@@ -48,9 +48,8 @@
 
 {%
   set classes = [
-    'block-' ~ configuration.provider|clean_class,
-    'block-' ~ plugin_id|clean_class,
-    card ? 'card',
+     'card',
+     'card__block',
   ]
 %}
 
