--- a/templates/block--views-block--task-feedback-block-1.html.twig
+++ b/templates/block--views-block--task-feedback-block-1.html.twig
@@ -62,8 +62,8 @@
 
 {% if not bare %}
 
-  <section{{ attributes.addClass(classes) }}>
-
+  <section>
+dddd
     {{ title_prefix }}
     {% if label %}
       <h3 {{ title_attributes.addClass(title_classes) }}>{{ label }}</h3>
